[tool.poetry]
name = "repl_python3_quant-python-03-2022-replit-1"
version = "0.1.0"
description = ""
authors = ["nenye65 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
